test: add unit tests for filtering and sorting upcoming persons by remark timestamp